# context_learning_aircraft_trajectoires

./: README.md  datautils.py  pyproject.toml  test_model.ckpt  trainingTS2Vec.ipynb  ts2vec.py
data/: create_traffic.ipynb  download_data.ipynb  preprocess_traffic.ipynb
data/utils/: adsb.py
