[tool.poetry]
name = "context-learning"
version = "0.1.0"
description = "Context Learning for aircraft trajectories"
authors = ["Timothé Krauth"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
scipy = "^1.14.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
bottleneck = "^1.4.0"
statsmodels = "^0.14.2"
traffic = {git = "https://github.com/xoolive/traffic.git"}
ipyleaflet = "^0.19.2"
jupyter = "^1.0.0"
notebook = "^6.5.4"
numpy = "^1.25.1"
plotly = "^5.15.0"
shapely = "^2.0.1"
altair = "^5.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"

[tool.poetry.group.cm_cluster.dependencies]
cm-jupyter-eg-kernel-wlm = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "W",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "NPY",  # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF"
]